--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,8 @@
     /** COLOR **/
     --color-amber-yellow: #f59e0b;
     --color-amber-yellow-light: #f59f0b65;
+    --color-primary-green: #016630;
+    --color-brown: #CD853F;
 
 
 
@@ -66,6 +68,7 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    background: var(--color-primary-green);
 }
 
 .logo {
@@ -119,6 +122,7 @@
     cursor: pointer;
     color: white;
     font-weight: bold;
+    background: var(--color-primary-green);
     transition: transform 0.5s ease-in-out;
 }
 
@@ -156,12 +160,13 @@
 
 .menuLinks .menuLink{
     padding: 10px 12px;
-    color: #f59e0b;
+    color: var(--color-primary-green);
     border-radius: 8px;
 }
 
 .menuLinks .menuLink:hover{
-    background: #f59f0b65;
+    background: var(--color-primary-green);
+    color: white;
 }
 
 /* DASHBOARD */
@@ -178,8 +183,7 @@
 .footer {
     width: 100%;
     padding-top: 50px;
-    padding-bottom: 50px;
-    background: rgb(159, 157, 3);
+    padding-bottom: 100px;
 }
 
 
